# app/Http/Controllers/MovieController.php
@@ -36,7 +36,7 @@ class MovieController extends Controller
 
     /**
      * @OA\GET(
-     *     path="/flix/api/movies",
+     *     path="/api/movies",
      *     tags={"Movies"},
      *     summary="Get list of movies",
      *     description="Returns list of movies",
@@ -59,7 +59,7 @@ class MovieController extends Controller
 
 /**
  * @OA\Post(
- *     path="/flix/api/movies",
+ *     path="/api/movies",
  *     operationId="createMovie",
  *     tags={"Movies"},
  *     summary="Create a new movie",
@@ -92,7 +92,7 @@ class MovieController extends Controller
 
      /**
      * @OA\GET(
-     *     path="/flix/api/movies/{movie}",
+     *     path="/api/movies/{movie}",
      *     operationId="getMovieById",
      *     tags={"Movies"},
      *     summary="Get a movie by ID",
@@ -113,7 +113,7 @@ class MovieController extends Controller
     }
 /**
  * @OA\Patch(
- *     path="/flix/api/movies/{movie}",
+ *     path="/api/movies/{movie}",
  *     operationId="updateMovie",
  *     tags={"Movies"},
  *     summary="Update Movie",
@@ -157,7 +157,7 @@ public function update(Request $request, Movie $movie)
 }
 /**
  * @OA\Delete(
- *     path="/flix/api/movies/{movie}",
+ *     path="/api/movies/{movie}",
  *     tags={"Movies"},
  *     summary="Delete Movie",
  *     description="Delete Movie from Database",
