# storage/api-docs/api-docs.json
@@ -13,14 +13,14 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/flix/api/auth/login": {
+        "/api/auth/login": {
             "post": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Login",
                 "description": "Login",
-                "operationId": "a67e3c1824178b0fcf5fe73b4c2d3276",
+                "operationId": "8dcb70df1020986038d098cc08d05dae",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -53,14 +53,14 @@
                 }
             }
         },
-        "/flix/api/auth/register": {
+        "/api/auth/register": {
             "post": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Register User",
                 "description": "Register New User",
-                "operationId": "99bf58071a339b1a1d4b5234330c8e53",
+                "operationId": "d764dd091cc4494ae0baf360b03319f3",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -101,14 +101,14 @@
                 }
             }
         },
-        "/flix/api/auth/me": {
+        "/api/auth/me": {
             "get": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Authenticated User Profile",
                 "description": "Authenticated User Profile",
-                "operationId": "7d65e3b9ed191a0e92fbc73ba5b88103",
+                "operationId": "b9abb1a7a74670a19c215c2c133f14d8",
                 "responses": {
                     "200": {
                         "description": "Authenticated User Profile"
@@ -127,14 +127,14 @@
                 ]
             }
         },
-        "/flix/api/auth/logout": {
+        "/api/auth/logout": {
             "post": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Logout",
                 "description": "Logout",
-                "operationId": "9e6c7ce8c370c1c27909db8436fc8fde",
+                "operationId": "69281b12abb272c76871f19cb17ca563",
                 "responses": {
                     "200": {
                         "description": "Logout"
@@ -148,14 +148,14 @@
                 }
             }
         },
-        "/flix/api/auth/refresh": {
+        "/api/auth/refresh": {
             "post": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Refresh",
                 "description": "Refresh",
-                "operationId": "85951f226e77a38a862f7882918370c4",
+                "operationId": "b2eae7a8032954d25b46c7ec6f489c68",
                 "responses": {
                     "200": {
                         "description": "Refresh"
@@ -174,7 +174,7 @@
                 ]
             }
         },
-        "/flix/api/movies": {
+        "/api/movies": {
             "get": {
                 "tags": [
                     "Movies"
@@ -248,7 +248,7 @@
                 ]
             }
         },
-        "/flix/api/movies/{movie}": {
+        "/api/movies/{movie}": {
             "get": {
                 "tags": [
                     "Movies"
